--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,717 @@
-.App {
+* {
+  margin: 0;
+}
+
+.navbar {
+  
+  left: 20%;
+  overflow: hidden;
+  display: flex;
+  padding-top: 20px;
+  max-width: 1110px;
+  max-height: 38px;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Muli", sans-serif;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+
+
+.navbar_middle a{
+  font-size: 11px;
+  letter-spacing: .1rem;
+    text-transform: uppercase;
+    padding: 10px 15px;
+    font-weight: 700;
+    text-decoration: none;
+    float: left;
+    text-align: center;
+    color: #000000;
+
+}
+
+.navbar_left img{
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.navbar_middle a:hover{
+  color: #9A6D5C;
+  cursor: pointer;
+}
+
+.icon_css {
+  padding: 9px 10px;
+}
+
+.active {
+  border-bottom: 1px solid black;
+}
+
+.icon_css_fb {
+  color:#1178F2;
+  padding: 9px 10px;
+}
+
+.icon_css_ig {
+  color:#D54374;
+  padding: 9px 10px;
+}
+
+
+/*           INTROOOOOOOOOOOOOOOOOOO        */
+
+.intro {
+  max-height: 440px;
+  display: flex;
+ 
+}
+
+.intro_left {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  padding-top: 150px;
+}
+
+.intro_right {
+  width:50%;
+}
+.intro_right img{
+  height:"700px";
+  width:"760px";
+}
+
+.intro_left h1{
+  font-size: 30px;
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-family: "Libre Baskerville", serif;
+    line-height: 1.2;
+    color: #333;
+    width:450px;
+    height:108px;
+    margin-top: 170px;
+    line-height: 1.2;
+    opacity: 1;
+    transform: translate(0);
+    transition-duration: .8s;
+    text-align: left!important;
+
+}
+
+.intro_left_creative {
+  width:210px;
+  height:176px;
+  padding:15px;
+}
+
+.intro_left_design {
+  width:210px;
+  height:176px;
+  padding:15px;
+}
+
+.intro_left_container {
+  display: flex;
+}
+
+
+.icon-color{
+  color:#8A5A3A;
+  padding-bottom: 20px;
+}
+
+
+.intro_left_design h3{
+ margin-bottom: 10px;
+ font-size: 16px;
+    font-weight: 700;
+}
+
+.intro_left_creative h3{
+  margin-bottom: 10px;
+  font-size: 16px;
+    font-weight: 700;
+ }
+
+
+ .intro_left_design p{
+  font-size: 14px;
+  line-height: 1.4;
+  color: gray;
+ }
+
+ .intro_left_creative p{
+  font-size: 14px;
+  line-height: 1.4;
+  color: gray;
+ }
+
+.bottom-left-block {
+  position: absolute;
+  bottom: -7.5%;
+  left: 50%;
+  max-width: 160px;
+  max-width: 175px;
+  background: #CD8765;
+  padding: 30px;
+}
+
+.intro_right_icon {
+  margin-bottom: 10px;
+  color:#ffffff;
+}
+
+.intro_right_h3{
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: #ffffff;
+  letter-spacing: .1rem;
+  font-weight: 500;
+  font-family: "Libre Baskerville", serif;
+}
+
+.intro_right_p{
+  margin-bottom: 16px;
+  font-size: 14px;
+  line-height: 1.3;
+  color: rgba(255, 255, 255, 0.8);
+  font-family: "Muli", sans-serif;
+  text-align: left;
+}
+
+ /* collection */
+
+ .collection {
+  display: flex;
+  padding-top: 350px;
+  padding-bottom: 80px;
+  max-width: 1220px;
+  margin: 0 auto;
+  bottom: 0%;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+ }
+
+ .collection img{
+   padding:15px;
+   transform: scale(1);
+   transition: all .4s ease-out 0s;
+   vertical-align: middle;
+    border-style: none;
+    box-sizing: border-box;
+    border-radius: 5px;
+    
+    
+ }
+ .collection img:hover{
+ transform: scale(1.06);
+ transition: all .4s ease-out 0s;
+ border-style: none;
+ vertical-align: middle;
+ box-sizing: border-box;
+ opacity: 0.8;
+
+
+}
+ .collection h2{
+  font-family: "Libre Baskerville",serif;
+  font-size: 35px;
+    font-weight: 500;
+    line-height: 1.2;
+    padding-bottom: 20px;
+    border-bottom: 1px solid black;
+ }
+
+ .container {
+  display: flex;
+  position: relative;
   text-align: center;
+  color: white;
+ }
+
+ .centered{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+ }
+
+ .collection_photos {
+   display: flex;
+ }
+
+ .container h4{
+  border-radius: 5px;
+   padding: 11px 28px;
+   background-color: lightgray;
+   color: #252525;
+   font-weight: 700;
+   font-size: 20px;
+   font-family: "Muli", sans-serif;
+ }
+
+/*  countdown   */
+
+.countdown {
+  max-height: 403px;
+  background-color: #F4F1E9;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1220px;
+  margin: 0 auto;
+  padding:80px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.countdown-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.countdown-left h2{
+  color: #252525;
+    font-size: 36px;
+    font-weight: 500;
+    margin-bottom: 30px;
+    position: relative;
+    font-family: "Muli", sans-serif;
+    line-height: 1.2;
+    box-sizing: border-box;
+    text-align: center;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.countdown-left hr{
+  width: 100px;
+  background: #8A5A3A;
+  margin: 0 auto;
+}
+
+.countdown-left p{
+  color: #6e6e6e;
+  font-size: 16px;
+    font-family: "Muli", sans-serif;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 0 0 15px 0;
+    max-width: 540px;
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.countdown-right img{
+  width:95%;
+  height:95%;
+}
+
+.products_price{
+  display: flex;
+    align-items: baseline;
+    justify-content: center;
+}
+.countdown-timer{
+  padding:15px 10px 10px 10px;
+  background-color: white ;
+  margin-right: 25px;
+  border-radius: 10px;
+}
+.countdown-timer p{
+  font-size: 36px;
+  color: #9A6D5C;
+  padding-top: 0px;
+  margin-bottom: 0px;
+}
+
+.countdown-timer > p > small{
+  font-size: 16px;
+  color: #b2b2b2;
+  margin-bottom: 0px;
+}
+
+.products_price span{
+  color:#9A6D5C;
+  font-size: 24px;
+  padding-right:5px;
+}
+ 
+.sales_sticker h2{
+  margin:0;
+  padding:0;
+  position:relative;
+  bottom: 50px;
+  left: 50px;
+}
+
+.countdown-right{
+  position: relative;
+  width:490px;
+  height:420px;
+}
+
+.sales_sticker {
+  position: absolute;
+  bottom: 220px;
+  left: -65px;
+  width:100px;
+  height:100px;
+  border: 3px dashed white;
+  border-radius: 50%;
+  background: #E7AB3C;
+
+}
+
+.sales_sticker h2{
+  padding:10px;
+  margin: 0;
+    padding: 0;
+    position: relative;
+    bottom: -25px;
+    left: 26px;
+    font-family:"Muli", sans-serif;
+    color: white;
+    font-weight: 500;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+/*   testimonial */
+
+.testimonial .slick-arrow.slick-prev,
+.testimonial .slick-arrow.slick-next {
+background: lightgray;
+width: 40px;
+height: 40px;
+display: flex;
+align-items: center;
+justify-content: center;
+z-index: 1;
+border-radius: 5px;
+}
+
+/*  about   */
+
+.about{
+  margin-top: 200px;
+  display: flex;
+
+}
+.about_right{
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding:20px;
+}
+
+.about_right h2{
+  font-size: 30px;
+  font-family: "Josefin Sans",sans-serif;
+  font-weight: 700;
+  margin-top: 10px;
+  color: #000a2d;
+  border-bottom: 1px solid #E7AB3C;
+}
+.about_right p{
+  max-width: 550px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  color: #464d65;
+    font-size: 14px;
+    font-family: "Roboto",sans-serif;
+    line-height: 25px;
+    margin-bottom: 15px;
+    font-weight: normal;
+    text-align: center;
+}
+
+
+
+/* mailer   */
+
+.mailer {
+  font-size: 14px;
+  font-family: open sans,sans-serif;
+  font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    max-width: 1140px;
+    margin:0 auto;
+    padding-bottom: 48px;
+    padding-top: 40px;
+}
+.mailer_first {
+  display: flex;
+  margin-bottom: 20px;
+  align-items: center;
+}
+
+.mailer_first input {
+  background: #fff;
+    border: 1px solid #dadada;
+    margin-right:25px;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    padding: .375rem .75rem;
+}
+
+.mailer_first label {
+ padding-right:15px;
+}
+
+
+.mailer-details textarea {
+  background: #fff;
+  border: 1px solid #dadada;
+      width: 49%;
+  border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding: .375rem .75rem;
+}
+
+.mailer-details {
+  color: #9c9c9c;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.mailer-details button {
+  cursor: pointer;
+  color: #fff;
+  padding: 12px 30px;
+    border-radius: 30px;
+    background-color:#1b6b03;
+    border-color: #0d3601;
+    margin-top: 20px;
+    transition: all 0.2s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.mailer-details button:hover {
+  background-color:#208003;
+}
+
+.mailer-details p{
+  padding-top: 20px;
+  Color: #4BB543;
+}
+
+.mailer h2{
+  margin-bottom: 20px;
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 1.6;
+  font-family: open sans,sans-serif;
+  color: #212529;
+}
+
+
+.logo_position {
+  display: flex;
+  align-content: center;
+  align-items: center;
+
+}
+
+.logo_text{
+  margin-left: 20px;
+}
+
+.logo_text h4{
+  font-weight: 800;
+  line-height: 1.2;
+  font-size: 14px;
+  display: block;
+  color: gray;
+  text-align: left;
+}
+
+.logo_text span{
+  color: gray;
+  line-height: 1.2;
+    font-size: 14px;
+    display: block;
+    text-align: left;
+    font-family: "Muli", sans-serif;
+}
+
+
+.about{
+  max-width: 1220px;
+  margin: 0 auto;
+  padding-top: 150px;
+  padding-bottom: 50px;
+
+}
+
+.about_right {
+  background: #F4F1E9;
+  font-family: "Muli", sans-serif;
+    line-height: 1.6;
+    min-width: 670px;
+    max-height: 342px;
+}
+
+.about_left{
+  top: -50px;
+    right: -50px;
+    z-index: 2;
+    position: relative;
+}
+
+.about_left img{
+  height: 400px;
+  width: 600px;
+}
+
+/* RESPONSIVE DESIGN  */
+
+@media (max-width:1025px) {
+  html,body{
+    overflow-x: hidden;
+}
+
+.sales_sticker {
+  position: absolute;
+  bottom: 240px;
+  left: -10px;
+}
+  .collection img {
+    max-width: 320px;
+}
+.countdown {
+  max-height: 403px;
+  background-color: #F4F1E9;
+  display: flex;
+  justify-content: space-between;
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.about_left img {
+  height: 320px;
+  width: 480px;
+}
+.about_right {
+
+  margin-left: 50px;
+  margin-right: 0px;
+  min-width: 420px;
+  max-height: 322px;
+}
+.about_right p {
+  max-width: 550px;
+  padding-top: 2px;
+  margin-bottom: 0px;
+}
+.navbar_left img {
+  
+  padding-left: 5px;
+}
+}
+
+@media (max-width:854px) {
+  html,body{
+    overflow-x: hidden;
+}
+.sales_sticker {
+  display: none;
+}
+
+.navbar_right{
+  display: none;
+}
+
+
+.about_left img {
+  display: none;
+}
+
+.about_right{
+  margin: 0 auto;
+}
+  .intro_right img{
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  .intro_right {
+    display: none;
   }
+  .intro_left {
+    width: 100%;
+  }
+
+  .collection img {
+    max-width: 250px;
+  }
+}
+
+@media (max-width:724px) {
+  .navbar_left{
+    display: none;
+  }
+  
+}
+
+@media (max-width:688px) {
+  .navbar{
+    padding-left: 50px;
+  }
+
+  .navbar_middle a {
+    font-size: 8px;
+  }
+  
+}
+
+@media (max-width:412px) {
+ .countdown-right img{
+  display: none;
+ }
+
+ .about_right p{
+  padding-top: 10px;
+  padding-right: 20px;
+ }
+
+ .MuiAvatar-img {
+  
+  width: 50%;
+  height: 50%;
+ }
+
+ .about_right p {
+  padding-bottom: 0px;
+}
+
+.intro_left h1{
+  display: none;
+}
+
+.collection_photos {
+  display: flex;
+  flex-direction: column;
+}
+
+.intro_left_creative{
+  max-width: 150px;
+}
+.intro_left_design{
+  max-width: 150px;
+}
 }
